# serializer version: 1
# name: test_entities[climate.bathroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bathroom',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': 'thermostat',
    'unique_id': '123456789012_1.4_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.bathroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 36.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 26.1,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bathroom',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'eco',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 30.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bathroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_entities[climate.bedroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': 'thermostat',
    'unique_id': '123456789012_1.3_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 36.6,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 25.1,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'eco',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 30.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_entities[climate.kitchen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.kitchen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': 'thermostat',
    'unique_id': '123456789012_1.2_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 38.5,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 23.4,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'eco',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 26.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_entities[climate.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': 'thermostat',
    'unique_id': '123456789012_1.1_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 36.6,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 24.8,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living room',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'eco',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 30.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_entities[climate.office-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.office',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ngbs_icon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': 'thermostat',
    'unique_id': '123456789012_1.5_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.office-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 36.2,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 24.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Office',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'eco',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'comfort',
        'eco',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 17>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 30.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.office',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
